--- a/.yourbase.yml
+++ b/.yourbase.yml
@@ -8,7 +8,7 @@ build_targets:
     container:
       image: yourbase/yb_ubuntu:18.04
     commands:
-      - mvn org.apache.maven.plugins:maven-dependency-plugin:2.8:get -DremoteRepositories=https://repository.apache.org/snapshots,https://repository.apache.org -Dartifact=org.apache.cxf:cxf-core:3.4.1-SNAPSHOT:jar -Dtransitive=false -Ddest=glassfish5/glassfish/lib
+      - mvn clean install
 ci:
   builds:
     - name: default
