--- a/.yourbase.yml
+++ b/.yourbase.yml
@@ -5,10 +5,14 @@ dependencies:
 
 build_targets:
   - name: default
+    environment:
+      - DEBIAN_FRONTEND=noninteractive
     container:
       image: yourbase/yb_ubuntu:18.04
     commands:
-      - mvn clean install
+      - apt -y update
+      - apt -y install libxtst6 libxtst6-dev
+      - mvn package
 ci:
   builds:
     - name: default
