--- a/.yourbase.yml
+++ b/.yourbase.yml
@@ -11,7 +11,7 @@ build_targets:
       image: yourbase/yb_ubuntu:18.04
     commands:
       - apt -y update
-      - apt -y install libxtst6 libxtst6-dev
+      - apt -y install libxtst6
       - mvn package
 ci:
   builds:
